<resources>
    <string name="app_name">Auktion</string>
    <string name="auktion">Auktion</string>
    <string name="masuk_untuk_memulai">Masuk untuk memulai</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="masuk">Masuk</string>
    <string name="admin">Admin</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="telepon">Telepon</string>
    <string name="registrasi">Registrasi</string>
    <string name="item_head">Televisi</string>
    <string name="item_money">Rp.200.000,00</string>
    <string name="sudah_punya_akun_masuk">Sudah punya Akun? Masuk</string>
    <string name="belum_punya_akun_daftar">Belum punya Akun? Daftar</string>
    <string name="profile">profile</string>
    <string name="pendataan_barang">Pendataan Barang</string>
    <string name="petugas">Petugas</string>
    <string name="deskripsi_barang">Deskripsi barang</string>
    <string name="harga_barang">harga Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="konfirmasi">KONFIRMASI</string>
    <string name="masukan_angka">Masukan Angka</string>
    <string name="masukan_penawaran1">Masukan Penawaran</string>
    <string name="belum_ada_data_mohon_memberitahukan_admin_atau_petugas_untuk_pengimputan">Belum Ada Data Mohon Memberitahukan admin atau petugas untuk pengimputan</string>
    <string name="mohon_tambah_barang_pada_menu_pendataan_barang">Mohon tambah barang pada menu pendataan barang</string>
    <string name="buka_lelang">Buka Lelang</string>
    <string name="tambah_barang">Tambah Barang</string>
    <string name="tanggal_terakhir_menawar">Tanggal Terakhir Menawar</string>
    <string name="back">Back</string>
    <string name="kembali">Kembali</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="pasang_penawaran">Pasang Penawaran</string>
    <string name="dibuka">Dibuka</string>
    <string name="ditutup">Ditutup</string>
    <string name="registrasi_admin">Registrasi Admin</string>
    <string name="masukan_kode_admin">Masukan Kode Admin</string>
    <string name="kode_sandi">Kode Sandi</string>
    <string name="persetujuan_saling_mengikat_antara_penjual_yakni_pihak_yang_menyerahkan_barang_dan_pembeli_sebagai_pihak_yang_membayar_harga_barang_yang_dijual">persetujuan saling mengikat antara penjual, yakni pihak yang menyerahkan barang, dan pembeli sebagai pihak yang membayar harga barang yang dijual</string>
    <string name="jual_beli">Jual beli</string>
    <string name="log_out">Log Out</string>
    <string name="todo">TODO</string>
    <string name="tidak_dapat_menawar">Tidak Dapat Menawar</string>
</resources>
