<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_auktion"
        style="@style/txtHead"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/auktion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_masuk"
        style="@style/txtHead.txtSub"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/masuk_untuk_memulai"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_auktion" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        style="@style/bgView"
        app:cardBackgroundColor="@color/bgShape"
        app:cardCornerRadius="@dimen/_7sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_masuk">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_username"
                style="@style/edt_base"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_36sdp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/txtNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_56sdp"
                android:layout_marginBottom="@dimen/_36sdp"
                android:text="Belum punya Akun? Daftar" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogin"
        style="@style/btn"
        android:text="@string/masuk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>