<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityPetugas.PetugasMenuActivity">

    <TextView
        android:id="@+id/tv_head_petugasMenu"
        style="@style/txtHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/auktion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sub_petugasMenu"
        style="@style/txtHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_36sdp"
        android:text="@string/petugas"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_head_petugasMenu" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_petugasMenu"
        style="@style/rv_item"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_petugasMenu"
        tools:listitem="@layout/item_petugas_menu" />


    <TextView
        android:id="@+id/tv_warning_petugasMenu"
        style="@style/txtHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mohon_tambah_barang_pada_menu_pendataan_barang"
        android:textAlignment="center"
        android:textSize="@dimen/_20ssp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_petugasMenu" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_main_petugasMenu"
        style="@style/fab_main"
        android:src="@drawable/ic_option"
        app:fabCustomSize="@dimen/_50sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_sub_pendataan_petugasMenu"
        style="@style/fab_main.sub"
        android:src="@drawable/ic_pendataan_barang"
        app:fabCustomSize="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fab_main_petugasMenu"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvFab_PendataanBarang_petugasMenu"
        style="@style/txtHead.txtSub.fab"
        android:text="@string/pendataan_barang"
        app:layout_constraintBottom_toTopOf="@id/fab_main_petugasMenu"
        app:layout_constraintRight_toLeftOf="@id/fab_sub_pendataan_petugasMenu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_sub_logOut_petugasMenu"
        style="@style/fab_main.sub"
        android:src="@drawable/ic_log_out"
        app:fabCustomSize="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fab_sub_pendataan_petugasMenu"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/tvFab_logOut_PetugasMenu"
        style="@style/txtHead.txtSub.fab"
        android:text="@string/log_out"
        app:layout_constraintBottom_toTopOf="@id/fab_sub_pendataan_petugasMenu"
        app:layout_constraintRight_toLeftOf="@id/fab_sub_logOut_petugasMenu" />


</androidx.constraintlayout.widget.ConstraintLayout>